core/tests/integration/fail/arrays/elem_at_non_int_index.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
%elem_at% [1, 2, 3] 0.5